2007-05-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxAclEditor.m ([UIxAclEditor -defaultUserID]) 
	([UIxAclEditor -_prepareUsers]): take the new SOGoObject's
	"defaultUserID" method into account.

	* UI/Common/UIxUserRightsEditor.m ([UIxUserRightsEditor -userIsDefaultUser]) 
	([UIxUserRightsEditor -_initRights]): take the new SOGoObject's
	"defaultUserID" method into account.

	* UI/MailerUI/UIxMailUserRightsEditor.m: added all the missing
	methods to support the IMAP acls mentionned in the RFC 4314,
	removed the ones specific to Cyrus.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -defaultUserID]): new
	mandatory method for subclasses. Removed the SOGoDefaultUserID
	global var.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -defaultUserID]):
	overriden method to return @"<default>".

	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
	-defaultUserID]): overriden method to return @"<default>".

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-aclsForUser:uid]): overriden method.
	([SOGoMailFolder -removeAclsForUsers:users]): overriden method.
	([SOGoMailFolder -setRoles:rolesforUser:uid]): overriden method.
	([SOGoMailFolder -defaultUserID]): overriden method.
	([SOGoMailFolder -hasSupportForDefaultRoles]): overriden method.

2007-05-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	-aclUsersForObjectAtPath:objectPathArray]): new method that being
	forwarded the calles to aclUsers for the GCS-based subclasses of
	SOGoObject.

	* SoObjects/Mailer/SOGoMailFolder.m: removed all the previous
	methods that would have been used to support IMAP acls. Replaced
	them with the new protocol for them that has been implemented in
	SOGo during the last few weeks.

	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
	-hasSupportForDefaultRoles]): override method by returning "YES".

	* SoObjects/SOGo/NSArray+Utilities.m ([NSMutableArray
	-addObjectUniquely:object]): new method with an explicit name.
