@@ -1,5 +1,8 @@
 2007-05-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* SoObjects/SOGo/SOGoPermissions.m: added the new role
+	"SOGoMailRole_MessageEraser".
+
 	* UI/Common/UIxAclEditor.m ([UIxAclEditor -defaultUserID]) 
 	([UIxAclEditor -_prepareUsers]): take the new SOGoObject's
 	"defaultUserID" method into account.
